--- a/public/index.html
+++ b/public/index.html
@@ -1194,8 +1194,6 @@
     <script src="https://github.com/niklasvh/html2canvas/releases/download/0.4.1/html2canvas.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.0.272/jspdf.debug.js"></script>
-    <script src="https://combinatronics.com/yegax/CorkPad/main/js/html2canvas.js"></script>
-    <script src="https://combinatronics.com/yegax/CorkPad/main/js/mediaElement.js"></script>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script>
         !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
@@ -1221,17 +1219,19 @@
 
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/colorElement.js"></script>
     -->
-    
-    <script type="text/javascript" src="js/counterElement.js"></script>
-    <script type="text/javascript" src="js/dragElement.js"></script>
-    <script type="text/javascript" src="js/statusElement.js"></script>
-    <script type="text/javascript" src="js/helpscreen.js"></script>   
-    <script type="text/javascript" src="js/theme.js"></script>
-    <script type="text/javascript" src="js/theme-bright.js"></script> 
-    <script type="text/javascript" src="js/bgElement.js"></script>
-    <script type="text/javascript" src="js/fontElement.js"></script>  
-    <script type="text/javascript" src="js/notestyleElement.js"></script>  
-    <script type="text/javascript" src="js/colorElement.js"></script>
+
+    <script type="text/javascript" src="/js/html2canvas.js"></script>
+    <script type="text/javascript" src="/js/mediaElement.js"></script>
+    <script type="text/javascript" src="/js/counterElement.js"></script>
+    <script type="text/javascript" src="/js/dragElement.js"></script>
+    <script type="text/javascript" src="/js/statusElement.js"></script>
+    <script type="text/javascript" src="/js/helpscreen.js"></script>   
+    <script type="text/javascript" src="/js/theme.js"></script>
+    <script type="text/javascript" src="/js/theme-bright.js"></script> 
+    <script type="text/javascript" src="/js/bgElement.js"></script>
+    <script type="text/javascript" src="/js/fontElement.js"></script>  
+    <script type="text/javascript" src="/js/notestyleElement.js"></script>  
+    <script type="text/javascript" src="/js/colorElement.js"></script>
 
 
 </body>
