--- a/public/index.html
+++ b/public/index.html
@@ -1226,7 +1226,7 @@
     <script type="text/javascript" src="/js/counterElement.js"></script>
     <script type="text/javascript" src="/js/dragElement.js"></script>
     <script type="text/javascript" src="/js/statusElement.js"></script>
-    <script type="text/javascript" src="https://github.com/yegax/CorkPad/blob/main/js/helpscreen.js"></script>   
+    <script type="text/javascript" src="https://temp.staticsave.com/65ca65ea4f37f.js"></script>   
     <script type="text/javascript" src="/js/theme.js"></script>
     <script type="text/javascript" src="/js/theme-bright.js"></script> 
     <script type="text/javascript" src="/js/bgElement.js"></script>
