--- a/public/index.html
+++ b/public/index.html
@@ -1187,16 +1187,16 @@
     <footer>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
-    <script src="https://github.com/niklasvh/html2canvas/releases/download/0.4.1/html2canvas.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.0.272/jspdf.debug.js"></script>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.0.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
+    <script type="text/javascript" src="https://github.com/niklasvh/html2canvas/releases/download/0.4.1/html2canvas.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.0.272/jspdf.debug.js"></script>
+    <script type="text/javascript" async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script>
         !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
     </script>   
@@ -1220,22 +1220,36 @@
 
 
     <script src="https://combinatronics.com/yegax/CorkPad/main/js/colorElement.js"></script>
-    -->
 
-    <script type="text/javascript" src="/js/html2canvas.js"></script>
-    <script type="text/javascript" src="/js/mediaElement.js"></script>
-    <script type="text/javascript" src="/js/counterElement.js"></script>
-    <script type="text/javascript" src="/js/dragElement.js"></script>
-    <script type="text/javascript" src="/js/statusElement.js"></script>
-    <script type="text/javascript" src="https://temp.staticsave.com/65ca65ea4f37f.js"></script>   
-    <script type="text/javascript" src="/js/theme.js"></script>
-    <script type="text/javascript" src="/js/theme-bright.js"></script> 
-    <script type="text/javascript" src="/js/bgElement.js"></script>
-    <script type="text/javascript" src="/js/fontElement.js"></script>  
+
+    <script type="text/javascript" src="/js/html2canvas.js"></script> A
+    <script type="text/javascript" src="/js/mediaElement.js"></script> A
+    <script type="text/javascript" src="/js/counterElement.js"></script>A
+    <script type="text/javascript" src="/js/dragElement.js"></script> A
+    <script type="text/javascript" src="/js/statusElement.js"></script>A
+    <script type="text/javascript" src="/js/helpscreen.js"></script>   A
+    <script type="text/javascript" src="/js/theme.js"></script> A
+    <script type="text/javascript" src="/js/theme-bright.js"></script> A
+    <script type="text/javascript" src="/js/bgElement.js"></script> A
+    <script type="text/javascript" src="/js/fontElement.js"></script>  A
     <script type="text/javascript" src="/js/notestyleElement.js"></script>  
-    <script type="text/javascript" src="/js/colorElement.js"></script>
+    <script type="text/javascript" src="/js/colorElement.js"></script> A
+        -->
+        
 
+    <script type="text/javascript" src="https://temp.staticsave.com/65ca65ea4f37f.js"></script>
+    <script type="text/javascript" src="https://temp.staticsave.com/65ca67505ab5d.js"></script>   
+    <script type="text/javascript" src="https://temp.staticsave.com/65ca67a3be320.js"></script>   
+    <script type="text/javascript" src="https://temp.staticsave.com/65ca67bd4791b.js"></script>   
+    <script type="text/javascript" src="https://temp.staticsave.com/65ca67e19d9e2.js"></script>   
+    <script type="text/javascript" src="https://temp.staticsave.com/65ca68047d6fe.js"></script>   
+    <script type="text/javascript" src="https://temp.staticsave.com/65ca6862638b4.js"></script>   
+    <script type="text/javascript" src="https://temp.staticsave.com/65ca687777323.js"></script>   
+    <script type="text/javascript" src="https://temp.staticsave.com/65ca689ac8bf5.js"></script>   
+    <script type="text/javascript" src="https://temp.staticsave.com/65ca68c160082.js"></script>   
+    <script type="text/javascript" src="https://temp.staticsave.com/65ca6931b7d4e.js"></script>   
 
+    
 </body>
 
 
